[package]
name = "domostroj"
version = "0.1.0"
authors = ["dcz <gilaac.dcz@porcupinefactory.org>"]
edition = "2018"

[workspace]
members = ["crates/*"]

[profile]
dev = { opt-level = 2 }
release = { lto = "thin" }

[dependencies]
approx = "0.4"
assert_float_eq = { path = "external/assert_float_eq" }
baustein = { path = "crates/baustein" }
env_logger = "0.8"
futures = "0.3"
float-ord = "0.3"
genawaiter = "0.99"
log = "0.4"
ron = "0.6"
serde = "1.0"

[dependencies.bevy]
version = "0.5"
default-features = false
features = ["bevy_wgpu", "bevy_winit", "render", "png", "x11"]

[dependencies.block-mesh]
git = "https://github.com/bonsairobo/block-mesh-rs"
# branch = "main"
rev = "e8a81d1"

[dependencies.feldspar]
git = "https://github.com/bonsairobo/feldspar"
# branch = "main"
rev = "e09001c1"

[dependencies.smooth-bevy-cameras]
git = "https://github.com/bonsairobo/smooth-bevy-cameras"
rev = "8782b98"
# branch = "main"
# path = "../smooth-bevy-cameras"


[patch.'https://github.com/bonsairobo/feldspar']
feldspar = { path = "../feldspar" }
