[package]
name = "domostroj"
version = "0.1.0"
authors = ["dcz <gilaac.dcz@porcupinefactory.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[workspace]
members = ["crates/*", "external/*"]

[profile]
dev = { opt-level = 2 }
release = { lto = "thin" }

[dev_dependencies]
assert_float_eq = { path = "external/assert_float_eq" }

[dependencies]
approx = "0.4"
baustein = { path = "crates/baustein", features = ["prefab_bevy", "prefab_feldspar"] }
bevy_egui = "0.9"
bincode = "1.3"
env_logger = "0.8"
futures = "0.3"
float-ord = "0.3"
#genawaiter = "0.99"
log = "0.4"
rental = "0.5"
rfd = "0.6"
ron = "0.6"
serde = "1.0"
wfc_3d = { path = "crates/wfc_3d" }

[dependencies.bevy]
version = "0.5"
default-features = false
features = ["bevy_wgpu", "bevy_winit", "render", "png", "x11"]

# To match baustein
[dependencies.block-mesh]
git = "https://github.com/dcz-self/block-mesh-rs"
rev = "d68ec6783a1f349f8ed82e867e77b944ce09b59e"

[dependencies.feldspar]
git = "https://github.com/dcz-self/feldspar/"
rev = "3af9c837c6b0cb20df8e32effb75f121586a6a19"

[dependencies.smooth-bevy-cameras]
git = "https://github.com/bonsairobo/smooth-bevy-cameras"
rev = "4b936de392aa26862ebfc435490c6b7aa7fdd225"
# branch = "main"
# path = "../smooth-bevy-cameras"
