[package]
name = "baustein"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false }
building_blocks_mesh = "*" # depend on feldspar's version
feldspar-core = {path = "../../../feldspar/crates/feldspar-core"}
feldspar-map = {path = "../../../feldspar/crates/feldspar-map"}
maplit = "1.0"
serde = "1.0"

[dependencies.block-mesh]
git = "https://github.com/bonsairobo/block-mesh-rs"
# branch = "main"
rev = "e8a81d1"

[dependencies.feldspar] # same as domostroj
git = "https://github.com/bonsairobo/feldspar"
# branch = "main"
rev = "e09001c1"

[dependencies.ndshape]
git = "https://github.com/dcz-self/ndshape-rs"
rev = "82e25b6"


[patch.'https://github.com/bonsairobo/feldspar']
feldspar = { path = "../../../feldspar" }
