[package]
name = "baustein"
version = "0.1.1"
authors = ["dcz <gilaac.dcz@porcupinefactory.org>"]
edition = "2021"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false }
building_blocks_mesh = "*" # depend on feldspar's version
maplit = "1.0"
serde = "1.0"

# Uses current ndshape to avoid split personality
[dependencies.block-mesh]
git = "https://github.com/dcz-self/block-mesh-rs"
rev = "d68ec6783a1f349f8ed82e867e77b944ce09b59e"

[dependencies.feldspar] # same as domostroj
git = "https://github.com/bonsairobo/feldspar"
# branch = "main"
rev = "e09001c1"

[dependencies.feldspar-core]
git = "https://github.com/bonsairobo/feldspar"
rev = "7f3dd60898ee85c"

[dependencies.feldspar-map]
git = "https://github.com/bonsairobo/feldspar"
rev = "7f3dd60898ee85c"

[dependencies.ndshape]
git = "https://github.com/bonsairobo/ndshape-rs"
rev = "d184932"


[patch.'https://github.com/bonsairobo/feldspar']
feldspar = { path = "../../../feldspar" }
