[package]
name = "wfc_3d"
version = "0.1.0"
authors = ["dcz <gilaac.dcz@porcupinefactory.org>"]
edition = "2021"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_float_eq = { path = "../../external/assert_float_eq" }
more-asserts = { path = "../../external/rust-more-asserts" }

[dependencies]
baustein = { path = "../baustein" }
float-ord = { path = "../../external/rust-float-ord" }
rand = { version = "0.8" }
